--- a/modeltesting_car.ipynb
+++ b/modeltesting_car.ipynb
@@ -1160,7 +1160,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torchGPUenv",
+   "display_name": "torchCPUenv",
    "language": "python",
    "name": "python3"
   },
@@ -1174,7 +1174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
