--- a/modeltesting_car.ipynb
+++ b/modeltesting_car.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "7ac6ce96",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "# desktop or laptop\n",
-    "machine = 'desktop'\n",
+    "machine = 'laptop'\n",
     "\n",
     "# Setup path to data folder\n",
     "if machine == 'laptop':\n",
