--- a/EDA_car.ipynb
+++ b/EDA_car.ipynb
@@ -33,7 +33,7 @@
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "# desktop or laptop\n",
-    "machine = 'laptop'\n",
+    "machine = 'desktop'\n",
     "\n",
     "# Setup path to data folder\n",
     "if machine == 'laptop':\n",
@@ -1900,11 +1900,115 @@
    "source": [
     "show_with_box(train_data_custom, 7, color='r', label=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ebc2f328",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "traindf = pd.read_csv(folder_path/'train'/'train_annotate.csv')\n",
+    "testdf = pd.read_csv(folder_path/'test'/'test_annotate.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "16208570",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "class\n",
+      "car             85082\n",
+      "trafficLight    22826\n",
+      "pedestrian      14239\n",
+      "truck            4716\n",
+      "biker            2497\n",
+      "empty            2320\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "class\n",
+      "car             42791\n",
+      "trafficLight    11451\n",
+      "pedestrian       7252\n",
+      "truck            2478\n",
+      "biker            1207\n",
+      "empty            1180\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "to_trafficLight_list = ['trafficLight-Green',\n",
+    "       'trafficLight-Red', 'trafficLight-GreenLeft',\n",
+    "       'trafficLight-Yellow', 'trafficLight-RedLeft', 'trafficLight-YellowLeft']\n",
+    "\n",
+    "traindf['class'] = traindf['class'].replace(to_trafficLight_list, 'trafficLight')\n",
+    "testdf['class'] = testdf['class'].replace(to_trafficLight_list, 'trafficLight')\n",
+    "\n",
+    "print(traindf['class'].value_counts())\n",
+    "print()\n",
+    "print(testdf['class'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "694f52ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "traindf.to_csv(folder_path/'train'/'train_annotate_1TL.csv', index=False)\n",
+    "testdf.to_csv(folder_path/'test'/'test_annotate_1TL.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "948bb5b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "traindf_test = pd.read_csv(folder_path/'train'/'train_annotate_1TL.csv')\n",
+    "testdf_test = pd.read_csv(folder_path/'test'/'test_annotate_1TL.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "3c3f9fae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "class\n",
+       "car             42791\n",
+       "trafficLight    11451\n",
+       "pedestrian       7252\n",
+       "truck            2478\n",
+       "biker            1207\n",
+       "empty            1180\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "testdf_test['class'].value_counts()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torchCPUenv",
+   "display_name": "torchGPUenv",
    "language": "python",
    "name": "python3"
   },
@@ -1918,7 +2022,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
