--- a/preprocess_car.ipynb
+++ b/preprocess_car.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "c3580ba9",
    "metadata": {},
    "outputs": [],
@@ -27,13 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "a4a38022",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your file path here\n",
-    "folder_path = Path(r\"C:\\self-driving-car\\data\")"
+    "folder_path = Path(r\"C:\\Udacity_car_data\\data\")"
    ]
   },
   {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "b6a17963",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
        "4         car   111   259   135   289  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,6 +167,24 @@
     "an_df = pd.read_csv(folder_path / \"_annotations.csv\")\n",
     "\n",
     "an_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0a43f375",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are a total of 194539 labels across 26300 images.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"There are a total of {len(an_df)} labels across {len(an_df['filename'].unique())} images.\")"
    ]
   },
   {
@@ -670,7 +688,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torchCPUenv",
+   "display_name": "torchGPUenv",
    "language": "python",
    "name": "python3"
   },
@@ -684,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
