--- a/preprocess_car.ipynb
+++ b/preprocess_car.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "c3580ba9",
    "metadata": {},
    "outputs": [],
@@ -27,13 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "a4a38022",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your file path here\n",
-    "folder_path = Path(r\"C:\\Udacity_car_data\\data\")"
+    "# folder_path = Path(r\"C:\\Udacity_car_data\\data\")\n",
+    "folder_path = Path(r\"C:\\self-driving-car\\data\")"
    ]
   },
   {
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "b6a17963",
    "metadata": {},
    "outputs": [
@@ -157,7 +158,7 @@
        "4         car   111   259   135   289  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "0a43f375",
    "metadata": {},
    "outputs": [
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "d6382fde",
    "metadata": {},
    "outputs": [
@@ -222,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "d61e73c0",
    "metadata": {},
    "outputs": [
@@ -259,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "b4928079",
    "metadata": {},
    "outputs": [
@@ -289,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "520e4dfe",
    "metadata": {},
    "outputs": [
@@ -323,35 +324,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1478895295619915949_jpg.rf.f772e0ae3974183c1bc...</td>\n",
+       "      <td>1478896023442310640_jpg.rf.afaa5e5b6bebc527593...</td>\n",
        "      <td>512</td>\n",
        "      <td>512</td>\n",
        "      <td>empty</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1478900697736227479_jpg.rf.8404d9f31ff24c23456...</td>\n",
+       "      <td>1478895770360641376_jpg.rf.kOdgNfWsXL7rh4p4ibb...</td>\n",
        "      <td>512</td>\n",
        "      <td>512</td>\n",
        "      <td>empty</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1478898162351724560_jpg.rf.ba26fdb7b7990f23a22...</td>\n",
+       "      <td>1478895445869106440_jpg.rf.WQtKPeyABpww1n1xYfh...</td>\n",
        "      <td>512</td>\n",
        "      <td>512</td>\n",
        "      <td>empty</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1478898754207135490_jpg.rf.YHqVVsjBc3Qo6GgL4q8...</td>\n",
+       "      <td>1478900660029643179_jpg.rf.dCjI947btjvY99NJcQw...</td>\n",
        "      <td>512</td>\n",
        "      <td>512</td>\n",
        "      <td>empty</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1478895557841565024_jpg.rf.vgOJRsGlh3MzaqvYIPy...</td>\n",
+       "      <td>1478896242246815015_jpg.rf.d8963b9621724782a49...</td>\n",
        "      <td>512</td>\n",
        "      <td>512</td>\n",
        "      <td>empty</td>\n",
@@ -362,14 +363,14 @@
       ],
       "text/plain": [
        "                                            filename  width  height  class\n",
-       "0  1478895295619915949_jpg.rf.f772e0ae3974183c1bc...    512     512  empty\n",
-       "1  1478900697736227479_jpg.rf.8404d9f31ff24c23456...    512     512  empty\n",
-       "2  1478898162351724560_jpg.rf.ba26fdb7b7990f23a22...    512     512  empty\n",
-       "3  1478898754207135490_jpg.rf.YHqVVsjBc3Qo6GgL4q8...    512     512  empty\n",
-       "4  1478895557841565024_jpg.rf.vgOJRsGlh3MzaqvYIPy...    512     512  empty"
+       "0  1478896023442310640_jpg.rf.afaa5e5b6bebc527593...    512     512  empty\n",
+       "1  1478895770360641376_jpg.rf.kOdgNfWsXL7rh4p4ibb...    512     512  empty\n",
+       "2  1478895445869106440_jpg.rf.WQtKPeyABpww1n1xYfh...    512     512  empty\n",
+       "3  1478900660029643179_jpg.rf.dCjI947btjvY99NJcQw...    512     512  empty\n",
+       "4  1478896242246815015_jpg.rf.d8963b9621724782a49...    512     512  empty"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "e005903b",
    "metadata": {},
    "outputs": [
@@ -491,7 +492,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>198034</th>\n",
-       "      <td>1478895577836747420_jpg.rf.21a96e931edea44c63a...</td>\n",
+       "      <td>1478898738210974354_jpg.rf.ed82bdf13d1773ebfdc...</td>\n",
        "      <td>512</td>\n",
        "      <td>512</td>\n",
        "      <td>empty</td>\n",
@@ -502,7 +503,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>198035</th>\n",
-       "      <td>1478895816064189218_jpg.rf.4e4c92626bc811e05b7...</td>\n",
+       "      <td>1478898849043520816_jpg.rf.Jt4AicdcxEZy5Wkxnl7...</td>\n",
        "      <td>512</td>\n",
        "      <td>512</td>\n",
        "      <td>empty</td>\n",
@@ -513,7 +514,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>198036</th>\n",
-       "      <td>1478898542830459757_jpg.rf.192c1ccaa5013aa03b4...</td>\n",
+       "      <td>1478896122275756188_jpg.rf.n5rlIs0MllCcBrR6raC...</td>\n",
        "      <td>512</td>\n",
        "      <td>512</td>\n",
        "      <td>empty</td>\n",
@@ -524,7 +525,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>198037</th>\n",
-       "      <td>1478896035439710748_jpg.rf.a232d0403973df947f4...</td>\n",
+       "      <td>1478895877193277238_jpg.rf.9a6ff2e126f4bc09a98...</td>\n",
        "      <td>512</td>\n",
        "      <td>512</td>\n",
        "      <td>empty</td>\n",
@@ -535,7 +536,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>198038</th>\n",
-       "      <td>1478895800068206827_jpg.rf.ab59b490ac1c338567f...</td>\n",
+       "      <td>1478895588691899080_jpg.rf.qvoalIcZEwRfZxtAOfL...</td>\n",
        "      <td>512</td>\n",
        "      <td>512</td>\n",
        "      <td>empty</td>\n",
@@ -557,11 +558,11 @@
        "3       1478900859981702684_jpg.rf.6830635c7d919747563...    512     512   \n",
        "4       1478900859981702684_jpg.rf.6830635c7d919747563...    512     512   \n",
        "...                                                   ...    ...     ...   \n",
-       "198034  1478895577836747420_jpg.rf.21a96e931edea44c63a...    512     512   \n",
-       "198035  1478895816064189218_jpg.rf.4e4c92626bc811e05b7...    512     512   \n",
-       "198036  1478898542830459757_jpg.rf.192c1ccaa5013aa03b4...    512     512   \n",
-       "198037  1478896035439710748_jpg.rf.a232d0403973df947f4...    512     512   \n",
-       "198038  1478895800068206827_jpg.rf.ab59b490ac1c338567f...    512     512   \n",
+       "198034  1478898738210974354_jpg.rf.ed82bdf13d1773ebfdc...    512     512   \n",
+       "198035  1478898849043520816_jpg.rf.Jt4AicdcxEZy5Wkxnl7...    512     512   \n",
+       "198036  1478896122275756188_jpg.rf.n5rlIs0MllCcBrR6raC...    512     512   \n",
+       "198037  1478895877193277238_jpg.rf.9a6ff2e126f4bc09a98...    512     512   \n",
+       "198038  1478895588691899080_jpg.rf.qvoalIcZEwRfZxtAOfL...    512     512   \n",
        "\n",
        "             class   xmin   ymin   xmax   ymax  \n",
        "0              car  291.0  247.0  370.0  331.0  \n",
@@ -579,7 +580,7 @@
        "[198039 rows x 8 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "e90e672f",
    "metadata": {},
    "outputs": [
@@ -623,7 +624,7 @@
     "y = df_full['class']\n",
     "\n",
     "sgkf = StratifiedGroupKFold(n_splits=3, shuffle=True, random_state=724)\n",
-    "# Take the first fold as test set\n",
+    "# Take the first fold as train/test split\n",
     "tr_idx, te_idx = next(sgkf.split(X, y, groups=groups))\n",
     "X_tr, X_te = X.iloc[tr_idx], X.iloc[te_idx]\n",
     "y_tr, y_te = y.iloc[tr_idx], y.iloc[te_idx]\n",
@@ -688,7 +689,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torchGPUenv",
+   "display_name": "torchCPUenv",
    "language": "python",
    "name": "python3"
   },
@@ -702,7 +703,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
