--- a/SSD_test.ipynb
+++ b/SSD_test.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c58a60f2",
    "metadata": {},
    "outputs": [
@@ -90,54 +90,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "aa63726c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'map': tensor(0.6256),\n",
-       " 'map_50': tensor(0.6256),\n",
-       " 'map_75': tensor(-1.),\n",
-       " 'map_small': tensor(0.5823),\n",
-       " 'map_medium': tensor(0.7987),\n",
-       " 'map_large': tensor(0.9010),\n",
-       " 'mar_1': tensor(0.3153),\n",
-       " 'mar_10': tensor(0.6620),\n",
-       " 'mar_100': tensor(0.6663),\n",
-       " 'mar_small': tensor(0.6279),\n",
-       " 'mar_medium': tensor(0.8134),\n",
-       " 'mar_large': tensor(0.9027),\n",
-       " 'map_per_class': tensor([0.5443, 0.7421, 0.4356, 0.6418, 0.7641]),\n",
-       " 'mar_100_per_class': tensor([0.5806, 0.7690, 0.5069, 0.6993, 0.7756]),\n",
-       " 'classes': tensor([0, 1, 2, 3, 4], dtype=torch.int32)}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "loss_dict['mAP'][-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "fa7e5efc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "21b471cc15c24f60bc68abb927d26f20",
+       "model_id": "b5c8110d62a842669ce8c2bbf72cf9bf",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/30 [00:00<?, ?it/s]"
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -147,28 +112,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0  |  mAP: 0.0309  |  Train loc loss: 2.7625  |  Train class loss: 2.9891  |  Test loc loss: 1.5670  |  Test class loss: 2.4757\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 90\u001b[0m\n\u001b[0;32m     70\u001b[0m train_dataloader \u001b[38;5;241m=\u001b[39m DataLoader(train_data, \n\u001b[0;32m     71\u001b[0m                               batch_size\u001b[38;5;241m=\u001b[39mBATCH_SIZE, \n\u001b[0;32m     72\u001b[0m                               shuffle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     77\u001b[0m                               collate_fn\u001b[38;5;241m=\u001b[39mcollate_detection\n\u001b[0;32m     78\u001b[0m                               )\n\u001b[0;32m     80\u001b[0m val_dataloader \u001b[38;5;241m=\u001b[39m DataLoader(val_data, \n\u001b[0;32m     81\u001b[0m                             batch_size\u001b[38;5;241m=\u001b[39mBATCH_SIZE, \n\u001b[0;32m     82\u001b[0m                             shuffle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     87\u001b[0m                             collate_fn\u001b[38;5;241m=\u001b[39mcollate_detection\n\u001b[0;32m     88\u001b[0m                             )\n\u001b[1;32m---> 90\u001b[0m results \u001b[38;5;241m=\u001b[39m \u001b[43mSSD_train\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mssdtestmodel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     91\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mtrain_dataloader\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtrain_dataloader\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     92\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mtest_dataloader\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mval_dataloader\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     93\u001b[0m \u001b[43m                    \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43moptimizer\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     94\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mscheduler\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mscheduler\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     95\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mpriors_cxcywh\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mssdtestmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpriors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     96\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mdevice\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdevice\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     97\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mearly_stopping_rounds\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     98\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mepochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m30\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     99\u001b[0m \u001b[43m                    \u001b[49m\u001b[43msave_model\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m    100\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mepoch_save_interval\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m    101\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mSAVE_DIR\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mC:\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mUsers\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43meblac\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mDocuments\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mGitHub\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mself-driving-car\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43msaved_models\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m    102\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mtiming\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m    103\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mpast_train_dict\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mloss_dict\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    104\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mloss\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mL1\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\n\u001b[0;32m    105\u001b[0m \u001b[43m                    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    107\u001b[0m plot_losses(results)\n",
-      "File \u001b[1;32mc:\\Users\\eblac\\Documents\\GitHub\\self-driving-car\\SSD_trainer.py:412\u001b[0m, in \u001b[0;36mSSD_train\u001b[1;34m(model, train_dataloader, test_dataloader, optimizer, priors_cxcywh, scheduler, tr_iou_thresh, tr_variances, tr_neg_pos_ratio, te_iou_thresh, te_variances, te_neg_pos_ratio, epochs, early_stopping_rounds, device, save_model, save_best_model, epoch_save_interval, SAVE_DIR, timing, past_train_dict, loss)\u001b[0m\n\u001b[0;32m    400\u001b[0m results \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtrain_loss\u001b[39m\u001b[38;5;124m\"\u001b[39m: [],\n\u001b[0;32m    401\u001b[0m            \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtrain_loss_loc\u001b[39m\u001b[38;5;124m\"\u001b[39m: [],\n\u001b[0;32m    402\u001b[0m            \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtrain_loss_conf\u001b[39m\u001b[38;5;124m\"\u001b[39m: [],\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    408\u001b[0m            \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtraining timing\u001b[39m\u001b[38;5;124m\"\u001b[39m: [],\n\u001b[0;32m    409\u001b[0m            \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtesting timing\u001b[39m\u001b[38;5;124m\"\u001b[39m: [],}\n\u001b[0;32m    411\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m epoch \u001b[38;5;129;01min\u001b[39;00m tqdm(\u001b[38;5;28mrange\u001b[39m(epochs)):\n\u001b[1;32m--> 412\u001b[0m     train_dict \u001b[38;5;241m=\u001b[39m \u001b[43mSSD_train_step\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    413\u001b[0m \u001b[43m                                \u001b[49m\u001b[43mdataloader\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtrain_dataloader\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    414\u001b[0m \u001b[43m                                \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43moptimizer\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    415\u001b[0m \u001b[43m                                \u001b[49m\u001b[43mpriors_cxcywh\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpriors_cxcywh\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    416\u001b[0m \u001b[43m                                \u001b[49m\u001b[43miou_thresh\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtr_iou_thresh\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    417\u001b[0m \u001b[43m                                \u001b[49m\u001b[43mvariances\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtr_variances\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    418\u001b[0m \u001b[43m                                \u001b[49m\u001b[43mneg_pos_ratio\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtr_neg_pos_ratio\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    419\u001b[0m \u001b[43m                                \u001b[49m\u001b[43mdevice\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdevice\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    420\u001b[0m \u001b[43m                                \u001b[49m\u001b[43mtiming\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtiming\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    421\u001b[0m \u001b[43m                                \u001b[49m\u001b[43mloss\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mloss\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    423\u001b[0m     test_dict \u001b[38;5;241m=\u001b[39m SSD_test_step(model\u001b[38;5;241m=\u001b[39mmodel,\n\u001b[0;32m    424\u001b[0m                               dataloader\u001b[38;5;241m=\u001b[39mtest_dataloader,\n\u001b[0;32m    425\u001b[0m                               priors_cxcywh\u001b[38;5;241m=\u001b[39mpriors_cxcywh,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    430\u001b[0m                               timing\u001b[38;5;241m=\u001b[39mtiming,\n\u001b[0;32m    431\u001b[0m                               loss\u001b[38;5;241m=\u001b[39mloss)\n\u001b[0;32m    433\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m scheduler \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "File \u001b[1;32mc:\\Users\\eblac\\Documents\\GitHub\\self-driving-car\\SSD_trainer.py:116\u001b[0m, in \u001b[0;36mSSD_train_step\u001b[1;34m(model, dataloader, optimizer, priors_cxcywh, iou_thresh, variances, neg_pos_ratio, device, timing, loss)\u001b[0m\n\u001b[0;32m    113\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m timing:\n\u001b[0;32m    114\u001b[0m     t0_build_tar \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mperf_counter()\n\u001b[1;32m--> 116\u001b[0m pos_mask, loc_t_pm, cls_t \u001b[38;5;241m=\u001b[39m \u001b[43mbuild_targets\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpriors_cxcywh\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpriors_cxcywh\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    117\u001b[0m \u001b[43m                                          \u001b[49m\u001b[43mtargets\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtargets\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    118\u001b[0m \u001b[43m                                          \u001b[49m\u001b[43mH\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mimages\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    119\u001b[0m \u001b[43m                                          \u001b[49m\u001b[43mW\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mimages\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    120\u001b[0m \u001b[43m                                          \u001b[49m\u001b[43miou_thresh\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43miou_thresh\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    121\u001b[0m \u001b[43m                                          \u001b[49m\u001b[43mvariances\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mvariances\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    122\u001b[0m \u001b[43m                                          \u001b[49m\u001b[43mdevice\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    124\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m timing:\n\u001b[0;32m    125\u001b[0m     t1_build_tar \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mperf_counter()\n",
-      "File \u001b[1;32mc:\\Users\\eblac\\Documents\\GitHub\\self-driving-car\\SSD_trainer.py:532\u001b[0m, in \u001b[0;36mbuild_targets\u001b[1;34m(priors_cxcywh, targets, H, W, iou_thresh, variances, device)\u001b[0m\n\u001b[0;32m    523\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mbuild_targets\u001b[39m(priors_cxcywh: torch\u001b[38;5;241m.\u001b[39mTensor,\n\u001b[0;32m    524\u001b[0m                   targets: List[Dict],\n\u001b[0;32m    525\u001b[0m                   H: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m300\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    529\u001b[0m                   device: \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcpu\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m    530\u001b[0m                   ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Tuple[torch\u001b[38;5;241m.\u001b[39mTensor, torch\u001b[38;5;241m.\u001b[39mTensor, torch\u001b[38;5;241m.\u001b[39mTensor]:\n\u001b[1;32m--> 532\u001b[0m     norm \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mW\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mH\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mW\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mH\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdevice\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfloat32\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    534\u001b[0m     loc_t_list   \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m    535\u001b[0m     cls_t_list   \u001b[38;5;241m=\u001b[39m []\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "Epoch: 0  |  mAP: 0.0441  |  Train loc loss: 2.8268  |  Train class loss: 3.0090  |  Test loc loss: 1.7975  |  Test class loss: 2.9292\n",
+      "Epoch: 1  |  mAP: 0.0791  |  Train loc loss: 1.4340  |  Train class loss: 2.2350  |  Test loc loss: 1.3673  |  Test class loss: 2.4139\n",
+      "Epoch: 2  |  mAP: 0.1193  |  Train loc loss: 1.1010  |  Train class loss: 1.9505  |  Test loc loss: 1.2839  |  Test class loss: 2.4470\n",
+      "Epoch: 3  |  mAP: 0.1592  |  Train loc loss: 0.9278  |  Train class loss: 1.7661  |  Test loc loss: 1.0398  |  Test class loss: 2.1825\n",
+      "Epoch: 4  |  mAP: 0.2034  |  Train loc loss: 0.8117  |  Train class loss: 1.6372  |  Test loc loss: 0.9025  |  Test class loss: 2.0618\n"
      ]
     }
    ],
    "source": [
     "ssdtestmodel = mySSD(num_classes=6).to(device)\n",
     "optimizer = torch.optim.SGD(ssdtestmodel.parameters(), lr=3e-3, momentum=0.9)\n",
-    "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer=optimizer, mode='min', factor=0.2, patience=5, threshold=1e-3, cooldown=0, min_lr=1e-6)\n",
+    "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer=optimizer, mode='min', factor=0.25, patience=5, threshold=1e-3, cooldown=0, min_lr=1e-6)\n",
     "\n",
     "resume_path = Path(r\"C:\\Users\\eblac\\Documents\\GitHub\\self-driving-car\\saved_models\") / \"last.ckpt\"\n",
     "if resume_path.exists():\n",
@@ -190,8 +145,8 @@
     "\n",
     "\n",
     "# # use new learning rate\n",
-    "# optimizer = torch.optim.SGD(ssdtestmodel.parameters(), lr=1e-4, momentum=0.9)\n",
-    "# scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer=optimizer, mode='min', factor=0.4, patience=4, threshold=1e-3, cooldown=0, min_lr=1e-6)\n",
+    "# optimizer = torch.optim.SGD(ssdtestmodel.parameters(), lr=1e-5, momentum=0.9)\n",
+    "# scheduler = None\n",
     "\n",
     "# transforms\n",
     "train_tfms = v2.Compose([\n",
@@ -223,7 +178,7 @@
     "])\n",
     "\n",
     "# need to put dataloaders on cpu to use pin_memory\n",
-    "train_set = CarImageClass.ImageClass(targ_dir=train_path, transform=train_tfms, file_pct=0.2, rand_seed=724, device='cpu')\n",
+    "train_set = CarImageClass.ImageClass(targ_dir=train_path, transform=train_tfms, file_pct=0.25, rand_seed=724, device='cpu')\n",
     "# test_data = CarImageClass.ImageClass(targ_dir=test_path, transform=test_tfms, file_pct=0.01)\n",
     "\n",
     "train_data, val_data = CarImageClass.make_train_test_split(full_set=train_set, test_size=0.25, rand_state=724, transform_train=train_tfms, transform_test=test_tfms, device='cpu')\n",
@@ -262,14 +217,13 @@
     "                    scheduler=scheduler,\n",
     "                    priors_cxcywh=ssdtestmodel.priors,\n",
     "                    device=device,\n",
-    "                    early_stopping_rounds=10,\n",
-    "                    epochs=30,\n",
+    "                    early_stopping_rounds=15,\n",
+    "                    epochs=10,\n",
     "                    save_model=True,\n",
     "                    epoch_save_interval=None,\n",
     "                    SAVE_DIR=r\"C:\\Users\\eblac\\Documents\\GitHub\\self-driving-car\\saved_models\",\n",
     "                    timing=False,\n",
     "                    past_train_dict=loss_dict,\n",
-    "                    loss='L1'\n",
     "                    )\n",
     "\n",
     "plot_losses(results)"
