--- a/SSD_test.ipynb
+++ b/SSD_test.ipynb
@@ -37,7 +37,7 @@
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "# desktop or laptop\n",
-    "machine = 'desktop'\n",
+    "machine = 'laptop'\n",
     "\n",
     "# Setup path to data folder\n",
     "if machine == 'laptop':\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "fa7e5efc",
    "metadata": {},
    "outputs": [
@@ -183,13 +183,15 @@
     "    v2.ToDtype(torch.float32, scale=True),\n",
     "    v2.RandomZoomOut(fill=0, p=0.5),\n",
     "\n",
-    "    ConditionalIoUCrop(\n",
-    "        min_area_frac=0.02,\n",
-    "        min_scale=0.6, max_scale=1.0,\n",
-    "        min_aspect_ratio=0.75, max_aspect_ratio=1.33,\n",
-    "        sampler_options=[0.05, 0.1, 0.3],\n",
-    "        trials=3\n",
-    "    ),\n",
+    "    ConditionalIoUCrop(min_area_frac=0.01,   # 1% threshold between \"large\" and \"small\"\n",
+    "                       small_min_scale=0.3,\n",
+    "                       large_min_scale=0.6,\n",
+    "                       max_scale=1.0,\n",
+    "                       min_aspect_ratio=0.75,\n",
+    "                       max_aspect_ratio=1.33,\n",
+    "                       small_sampler_options=(0.0, 0.05, 0.1, None),\n",
+    "                       large_sampler_options=(0.05, 0.1, 0.3, None),\n",
+    "                       trials=10),\n",
     "\n",
     "    v2.SanitizeBoundingBoxes(min_size=1.0),\n",
     "    v2.RandomHorizontalFlip(p=0.5),\n",
@@ -1490,7 +1492,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torchGPUenv",
+   "display_name": "torchCPUenv",
    "language": "python",
    "name": "python3"
   },
@@ -1504,7 +1506,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
