--- a/SSD_test.ipynb
+++ b/SSD_test.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "fa7e5efc",
    "metadata": {},
    "outputs": [
@@ -215,11 +215,11 @@
     "train_tfms = v2.Compose([\n",
     "    v2.ToImage(),\n",
     "    v2.ToDtype(torch.float32, scale=True),\n",
-    "    v2.RandomZoomOut(fill=0, p=0.5),\n",
+    "    # v2.RandomZoomOut(fill=0, p=0.5),       # Zoom out likey hurts performance\n",
     "\n",
     "    ConditionalIoUCrop(min_area_frac=0.01,   # 1% threshold between \"large\" and \"small\"\n",
-    "                       small_min_scale=0.3,\n",
-    "                       large_min_scale=0.6,\n",
+    "                       small_min_scale=0.4,\n",
+    "                       large_min_scale=0.7,\n",
     "                       max_scale=1.0,\n",
     "                       min_aspect_ratio=0.75,\n",
     "                       max_aspect_ratio=1.33,\n",
@@ -1553,7 +1553,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torchGPUenv",
+   "display_name": "torchCPUenv",
    "language": "python",
    "name": "python3"
   },
@@ -1567,7 +1567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
