--- a/SSD_built_targets_demo.ipynb
+++ b/SSD_built_targets_demo.ipynb
@@ -909,7 +909,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torchCPUenv",
+   "display_name": "torchGPUenv",
    "language": "python",
    "name": "python3"
   },
@@ -923,7 +923,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
