--- a/SSD_explained.ipynb
+++ b/SSD_explained.ipynb
@@ -144,15 +144,18 @@
    "source": [
     "### How to interpret the model outputs?\n",
     "\n",
-    "The output of the classification head is easier to understand.  Given an image (i.e. batch size $B=1$), the classification head outputs are class logits for each prior.\n",
+    "The output of the classification head is easier to understand.  Given an image (i.e. batch size $B=1$), the classification head outputs are class logits for each prior.  Given a particular prior, the classification head output is $(\\ell_1, \\ell_2, \\ldots, \\ell_{C})$, where $C$ is the number of classes and $\\ell_j$, $j=1,\\ldots, C$, is the logit for class $j$.  The class probabilities are $(p_1, p_2, \\ldots, p_{C})$ are computed via the softmax function, i.e.\n",
+    "\\begin{equation*}\n",
+    "    p_{j} = \\frac{e^{\\ell_{j}}}{\\sum_{i=1}^{C}e^{\\ell_{i}}}, \\quad j=1,2,\\ldots,C.\n",
+    "\\end{equation*}\n",
     "\n",
     "If the classification score corresponding to a particular prior $p = (c_{x}^{p}, c_{y}^{p}, w^{p}, h^{p})$ is high, that means a GT box $g = (c_{x}^{g}, c_{y}^{g}, w^{g}, h^{g})$ should be 'close' to $p$.  The localization head does not predict locations of objects, it predicts offsets to priors of the form $(t_x, t_y, t_w, t_h)$, where\n",
     "\\begin{equation*}\n",
-    "t_{x} = \\frac{c_{x}^{g} - c_{x}^{p}}{w^{p}v_{c}}, \\quad t_{y} = \\frac{c_{y}^{g} - c_{y}^{p}}{h^{p}v_{c}}, \\quad t_{w} = \\frac{\\log(w^{g}/w^{p})}{v_{s}}, \\quad t_{h} = \\frac{\\log(h^{g}/h^{p})}{v_{s}}.\n",
+    "t_{x} = \\frac{c_{x}^{\\hat{g}} - c_{x}^{p}}{w^{p}v_{c}}, \\quad t_{y} = \\frac{c_{y}^{\\hat{g}} - c_{y}^{p}}{h^{p}v_{c}}, \\quad t_{w} = \\frac{\\log(w^{\\hat{g}}/w^{p})}{v_{s}}, \\quad t_{h} = \\frac{\\log(h^{\\hat{g}}/h^{p})}{v_{s}},\n",
     "\\end{equation*}\n",
-    "Let's reiterate that the GT box $g$ is unknown and $(t_x, t_y, t_w, t_h)$ are the predicted values, so our predicted bounding box has coordinates \n",
+    "where $\\hat{g}=(c_{x}^{\\hat{g}}, c_{y}^{\\hat{g}}, w^{\\hat{g}}, h^{\\hat{g}})$ is the predicted bounding box.  Let us reiterate that the GT box $g$ is unknown and $(t_x, t_y, t_w, t_h)$ are the predicted values, so our predicted bounding box has coordinates \n",
     "\\begin{equation*}\n",
-    "c_{x}^{g} = c_{x}^{p} + t_{x}w^{p}v_{c}, \\quad c_{y}^{g} = c_{y}^{p} + t_{y}h^{p}v_{c}, \\quad w^{g} = w^{p}\\mathrm{e}^{t_{w}v_{s}}, \\quad h^{g} = h^{p}\\mathrm{e}^{t_{h}v_{s}}.\n",
+    "c_{x}^{\\hat{g}} = c_{x}^{p} + t_{x}w^{p}v_{c}, \\quad c_{y}^{\\hat{g}} = c_{y}^{p} + t_{y}h^{p}v_{c}, \\quad w^{\\hat{g}} = w^{p}\\mathrm{e}^{t_{w}v_{s}}, \\quad h^{\\hat{g}} = h^{p}\\mathrm{e}^{t_{h}v_{s}}.\n",
     "\\end{equation*}"
    ]
   },
