--- a/SSD_built_targets_demo.ipynb
+++ b/SSD_built_targets_demo.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "08c5491c",
    "metadata": {},
    "outputs": [
@@ -82,14 +82,14 @@
     "    # v2.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
     "])\n",
     "\n",
-    "toy_set = CarImageClass.ImageClass(targ_dir=train_path, transform=min_tfms, file_pct=1, rand_seed=724, device='cpu')\n",
+    "toy_set = CarImageClass.ImageClass(targ_dir=train_path, transform=min_tfms, file_pct=1, rand_seed=724)\n",
     "\n",
     "toy_set.show_with_box(index=69, color='g', lw=2, label=True);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "f5da63c5",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
     "                 std=[0.229, 0.224, 0.225]),\n",
     "])\n",
     "\n",
-    "toy_set_tfms = CarImageClass.ImageClass(targ_dir=train_path, transform=test_tfms, file_pct=1, rand_seed=724, device='cpu')\n",
+    "toy_set_tfms = CarImageClass.ImageClass(targ_dir=train_path, transform=test_tfms, file_pct=1, rand_seed=724)\n",
     "\n",
     "toy_dataloader = DataLoader(toy_set_tfms, \n",
     "                              batch_size=1, \n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "66f49cab",
    "metadata": {},
    "outputs": [],
@@ -508,10 +508,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "15457c50",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Error(s) in loading state_dict for mySSD:\n\tMissing key(s) in state_dict: \"priors\", \"priors_xyxy\". ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m resume_path \u001b[38;5;241m=\u001b[39m Path(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC:\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mUsers\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124meblac\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mOneDrive\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mDocuments\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mGitHub\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mself-driving-car\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124msaved_models\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;241m/\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mL1Loss_mAP_432_11_15_2025.ckpt\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m resume_path\u001b[38;5;241m.\u001b[39mexists():\n\u001b[1;32m----> 7\u001b[0m     start_epoch, best_map, loss_dict \u001b[38;5;241m=\u001b[39m \u001b[43mload_checkpoint\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      8\u001b[0m \u001b[43m        \u001b[49m\u001b[43mresume_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mssdtestmodel_loaded\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43moptimizer_loaded\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mscheduler\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mscheduler_loaded\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      9\u001b[0m \u001b[43m        \u001b[49m\u001b[43mscaler\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmap_location\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcpu\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# safe load, then move to device\u001b[39;49;00m\n\u001b[0;32m     10\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     11\u001b[0m     ssdtestmodel_loaded\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "File \u001b[1;32mc:\\Users\\eblac\\OneDrive\\Documents\\GitHub\\self-driving-car\\SSD_trainer.py:797\u001b[0m, in \u001b[0;36mload_checkpoint\u001b[1;34m(path, model, optimizer, scheduler, scaler, map_location)\u001b[0m\n\u001b[0;32m    795\u001b[0m \u001b[38;5;66;03m# Model (handle DataParallel)\u001b[39;00m\n\u001b[0;32m    796\u001b[0m target \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mmodule \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(model, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodule\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01melse\u001b[39;00m model\n\u001b[1;32m--> 797\u001b[0m \u001b[43mtarget\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_state_dict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mckpt\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mmodel_state\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    799\u001b[0m \u001b[38;5;66;03m# Opt / sched / scaler (if present and provided)\u001b[39;00m\n\u001b[0;32m    800\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m optimizer \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m ckpt\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moptimizer_state\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "File \u001b[1;32mc:\\Users\\eblac\\anaconda3\\envs\\torchCPUenv\\lib\\site-packages\\torch\\nn\\modules\\module.py:2584\u001b[0m, in \u001b[0;36mModule.load_state_dict\u001b[1;34m(self, state_dict, strict, assign)\u001b[0m\n\u001b[0;32m   2576\u001b[0m         error_msgs\u001b[38;5;241m.\u001b[39minsert(\n\u001b[0;32m   2577\u001b[0m             \u001b[38;5;241m0\u001b[39m,\n\u001b[0;32m   2578\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMissing key(s) in state_dict: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m. \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[0;32m   2579\u001b[0m                 \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mk\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m missing_keys)\n\u001b[0;32m   2580\u001b[0m             ),\n\u001b[0;32m   2581\u001b[0m         )\n\u001b[0;32m   2583\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(error_msgs) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m-> 2584\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[0;32m   2585\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mError(s) in loading state_dict for \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[0;32m   2586\u001b[0m             \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(error_msgs)\n\u001b[0;32m   2587\u001b[0m         )\n\u001b[0;32m   2588\u001b[0m     )\n\u001b[0;32m   2589\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m _IncompatibleKeys(missing_keys, unexpected_keys)\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Error(s) in loading state_dict for mySSD:\n\tMissing key(s) in state_dict: \"priors\", \"priors_xyxy\". "
+     ]
+    }
+   ],
    "source": [
     "ssdtestmodel_loaded = mySSD(num_classes=6).to(device)\n",
     "optimizer_loaded = torch.optim.SGD(ssdtestmodel_loaded.parameters(), lr=3e-3, momentum=0.9)\n",
@@ -904,6 +918,55 @@
     "\n",
     "toy_set_CIOUtfms.show_with_box(index=idx, color='g', lw=2, label=True);\n",
     "toy_set.show_with_box(index=idx, color='g', lw=2, label=True);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3124614",
+   "metadata": {},
+   "source": [
+    "# Precision and Recall\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "    \\text{Precision} = \\frac{\\text{\\# TP}}{\\text{\\# TP} + \\text{\\# FP}}, \\quad \\text{Recall} = \\frac{\\text{\\# TP}}{\\text{\\# TP} + \\text{\\# FN}}\n",
+    "\\end{equation*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14832a94",
+   "metadata": {},
+   "source": [
+    "Each ground truth (GT) object has:\n",
+    "* a bounding box $g$,\n",
+    "* classification label $c^{g}_{i}$,\n",
+    "\n",
+    " where $c_{j}$, $j=1,\\ldots, C$, are the possible classes and the superscript denotes the object.\n",
+    " \n",
+    "Each predicted object has:\n",
+    "* a bounding box $\\hat{g}$,\n",
+    "* classification label $c^{\\hat{g}}_{k}$,\n",
+    "* a confidence score $s^{\\hat{g}}$,\n",
+    "\n",
+    "where $s^{\\hat{g}}$ is the highest confidence score among all classes for the object $\\hat{g}$, i.e. $s^{\\hat{g}}=\\max\\limits_{i=1,\\ldots,C}s^{\\hat{g}}_{i}$, where $s^{\\hat{g}}_{i}$ is the confidence score of class $i$ for object $\\hat{g}$.\n",
+    "\n",
+    "#### True positive (TP)\n",
+    "A predicted object corresponding to a GT is TP if all of the following are true:\n",
+    "* classes match (i.e. $k=i$)\n",
+    "* spatial match, typically $\\mathrm{IoU}(g, \\hat{g}) \\geq \\text{IoU threshold}$,\n",
+    "* the confidence score $s^{\\hat{g}} = s^{\\hat{g}}_{i}$, i.e. class $i$ gives the highest confidence score.\n",
+    "\n",
+    "#### False positive (FP)\n",
+    "A predicted object is a FP is any of the following are true:\n",
+    "* not a spatial match, typically $\\mathrm{IoU}(g, \\hat{g}) < \\text{IoU threshold}$,\n",
+    "* wrong class (i.e. $k\\neq i$),\n",
+    "* duplicate detection (there is another prediction with better spatial match)\n",
+    "* prediction on background (predicting a class that is not present in current image)\n",
+    "\n",
+    "In other words, a FP is a predicted detection that fails to be a valid match to any new ground-truth object of the correct class at the chosen IoU threshold, given the standard “each ground truth can only be matched once” rule.\n",
+    "\n",
+    "#### False negative (FN)\n",
+    "A False Negative (FN) is a ground-truth object of class $c$ that is not matched by any prediction of class $c$ with $\\mathrm{IoU}(g, \\hat{g}) \\geq \\text{IoU threshold}$."
    ]
   }
  ],
