--- a/EDA_car.ipynb
+++ b/EDA_car.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "718d5805",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "# desktop or laptop\n",
-    "machine = 'laptop'\n",
+    "machine = 'desktop'\n",
     "\n",
     "# Setup path to data folder\n",
     "if machine == 'laptop':\n",
@@ -38,13 +38,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "af619419",
    "metadata": {},
    "outputs": [],
    "source": [
     "# load training data\n",
     "train_data = CarImageClass.ImageClass(targ_dir=train_path, file_list=None, transform=None, file_pct=1, rand_seed=724, include_area=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ab50b62e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('biker', 0), ('car', 1), ('pedestrian', 2), ('trafficLight', 3), ('truck', 4)])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.class_to_idx.items()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6a0fe836",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['pedestrian']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[k for k, v in train_data.class_to_idx.items() if v == 2]"
    ]
   },
   {
@@ -625,7 +667,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torchCPUenv",
+   "display_name": "torchGPUenv",
    "language": "python",
    "name": "python3"
   },
@@ -639,7 +681,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
