Created app on GCP

--- a/EDA_car.ipynb
+++ b/EDA_car.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "718d5805",
    "metadata": {},
    "outputs": [],
@@ -20,11 +20,12 @@
     "import numpy as np\n",
     "\n",
     "import CarImageClass\n",
+    "from SSD_from_scratch import mySSD\n",
     "\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "# desktop or laptop\n",
-    "machine = 'desktop'\n",
+    "machine = 'laptop'\n",
     "\n",
     "# Setup path to data folder\n",
     "if machine == 'laptop':\n",
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "af619419",
    "metadata": {},
    "outputs": [],
@@ -49,44 +50,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "ab50b62e",
+   "execution_count": null,
+   "id": "4d86dedb",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "dict_items([('biker', 0), ('car', 1), ('pedestrian', 2), ('trafficLight', 3), ('truck', 4)])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\eblac\\AppData\\Local\\Temp\\ipykernel_4012\\3936211859.py:5: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  ckpt = torch.load(ckpt_path, map_location=\"cpu\")  # weights_only=False is default\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['epoch', 'model_state', 'optimizer_state', 'scheduler_state', 'scaler_state', 'best_metric', 'rng_state', 'loss_dict'])\n",
+      "Saved weights-only state_dict to C:\\Users\\eblac\\OneDrive\\Documents\\GitHub\\self-driving-car\\saved_models\\weight_only_mAP_432_11_15_2025.pth\n"
+     ]
     }
    ],
    "source": [
-    "train_data.class_to_idx.items()"
+    "ckpt_path = r\"C:\\Users\\eblac\\OneDrive\\Documents\\GitHub\\self-driving-car\\saved_models\\L1Loss_mAP_432_11_15_2025.ckpt\"\n",
+    "out_path  = r\"C:\\Users\\eblac\\OneDrive\\Documents\\GitHub\\self-driving-car\\saved_models\\weight_only_mAP_432_11_15_2025.pth\"\n",
+    "\n",
+    "# 1) Load the checkpoint as a raw dict\n",
+    "ckpt = torch.load(ckpt_path, map_location=\"cpu\")  # weights_only=False is default\n",
+    "\n",
+    "# 2) Inspect keys if you want\n",
+    "print(ckpt.keys())  # should include: 'model_state', 'optimizer_state', ...\n",
+    "\n",
+    "# 3) Extract the model state_dict\n",
+    "state_dict = ckpt[\"model_state\"]\n",
+    "\n",
+    "# 4) Save a clean weights-only file\n",
+    "torch.save(state_dict, out_path)\n",
+    "\n",
+    "print(f\"Saved weights-only state_dict to {out_path}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "6a0fe836",
+   "execution_count": 2,
+   "id": "b9426390",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\eblac\\AppData\\Local\\Temp\\ipykernel_13868\\4012047859.py:8: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  state_dict = torch.load(WEIGHTS_PATH, map_location=\"cpu\")\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "['pedestrian']"
+       "<All keys matched successfully>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[k for k, v in train_data.class_to_idx.items() if v == 2]"
+    "ssd_model = mySSD(class_to_idx_dict={'biker': 0, 'car': 1, 'pedestrian': 2, 'trafficLight': 3, 'truck': 4},\n",
+    "                  in_channels=3,\n",
+    "                  variances=(0.1, 0.2))\n",
+    "\n",
+    "ssd_model.to(device='cpu')\n",
+    "\n",
+    "WEIGHTS_PATH = r\"C:\\Users\\eblac\\OneDrive\\Documents\\GitHub\\self-driving-car\\saved_models\\weight_only_mAP_432_11_15_2025.pth\"\n",
+    "state_dict = torch.load(WEIGHTS_PATH, map_location=\"cpu\")\n",
+    "ssd_model.load_state_dict(state_dict)"
    ]
   },
   {
@@ -667,7 +705,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torchGPUenv",
+   "display_name": "torchCPUenv",
    "language": "python",
    "name": "python3"
   },
@@ -681,7 +719,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
